--- a/listpokemon/src/main/res/layout/item_pokemon.xml
+++ b/listpokemon/src/main/res/layout/item_pokemon.xml
@@ -1,14 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginBottom="15dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/pokemon_name"
-        app:layout_constraintTop_toTopOf="parent"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/pokemon_image"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginEnd="30dp"
+        android:src="@drawable/ic_pokebola"
+        android:translationZ="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="140dp"
+        android:layout_height="100dp"
+        android:elevation="5dp"
+        android:scaleType="centerCrop"
+        android:alpha="0.2"
+        android:src="@drawable/ic_group_6"
+        app:layout_constraintRight_toRightOf="@id/card"
+        app:layout_constraintTop_toTopOf="@id/card" />
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="texto"/>
+        android:layout_height="100dp"
+        android:layout_marginTop="30dp"
+        android:elevation="0dp"
+        android:orientation="vertical"
+        android:translationZ="0dp"
+        app:cardBackgroundColor="@android:color/darker_gray"
+        app:cardCornerRadius="9dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/pokemon_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/pokemon_name"
+                android:layout_width="wrap_content"
+                android:textSize="18sp"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/pokemon_id" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
