--- a/details/src/main/res/drawable/ic_weight.xml
+++ b/details/src/main/res/drawable/ic_weight.xml
@@ -1,42 +1,36 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="512dp"
     android:height="512dp"
-    android:viewportWidth="128"
-    android:viewportHeight="128">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="m6.306,111.542 l9.438,-56.848a12.806,12.806 0,0 1,12.632 -10.708h71.248a12.806,12.806 0,0 1,12.632 10.708l9.438,56.848z"
-      android:fillColor="#f45858"/>
+      android:pathData="m12,7c-1.93,0 -3.5,-1.57 -3.5,-3.5s1.57,-3.5 3.5,-3.5 3.5,1.57 3.5,3.5 -1.57,3.5 -3.5,3.5zM12,1.5c-1.103,0 -2,0.897 -2,2s0.897,2 2,2 2,-0.897 2,-2 -0.897,-2 -2,-2z"
+      android:fillColor="#546e7a"/>
   <path
-      android:pathData="m14.002,111.542h99.996v10.151h-99.996z"
-      android:fillColor="#6d7a84"/>
+      android:pathData="m22.052,24h-20.104c-0.52,0 -1.011,-0.229 -1.344,-0.629 -0.333,-0.399 -0.471,-0.922 -0.378,-1.434l2.636,-14.5c0.152,-0.833 0.876,-1.437 1.722,-1.437h14.831c0.846,0 1.57,0.604 1.722,1.437l2.636,14.5c0.093,0.512 -0.044,1.034 -0.378,1.434 -0.333,0.4 -0.823,0.629 -1.343,0.629z"
+      android:fillColor="#b0bec5"/>
   <path
-      android:pathData="m6.306,6.306v4.725a18.135,18.135 0,0 0,18.135 18.135h79.118a18.135,18.135 0,0 0,18.135 -18.135v-4.725z"
-      android:fillColor="#f45858"/>
+      android:pathData="m12,0c-1.93,0 -3.5,1.57 -3.5,3.5 0,0.978 0.404,1.864 1.053,2.5h2.447v-0.5c-1.103,0 -2,-0.897 -2,-2s0.897,-2 2,-2z"
+      android:fillColor="#49606a"/>
   <path
-      android:pathData="m55.745,29.166h16.509v14.82h-16.509z"
-      android:fillColor="#f2da30"/>
+      android:pathData="m12,6h-2.447,-4.969c-0.846,0 -1.57,0.604 -1.722,1.437l-2.636,14.5c-0.093,0.512 0.044,1.034 0.378,1.434s0.824,0.629 1.344,0.629h10.052z"
+      android:fillColor="#99a5ac"/>
   <path
-      android:pathData="M64,77.764m-23.935,0a23.935,23.935 0,1 1,47.87 0a23.935,23.935 0,1 1,-47.87 0"
-      android:fillColor="#dfeef4"/>
+      android:pathData="m6.75,19c-0.414,0 -0.75,-0.336 -0.75,-0.75v-6.5c0,-0.414 0.336,-0.75 0.75,-0.75s0.75,0.336 0.75,0.75v6.5c0,0.414 -0.336,0.75 -0.75,0.75z"
+      android:fillColor="#546e7a"/>
   <path
-      android:pathData="m65.75,53.9v4.68a1.75,1.75 0,0 1,-3.5 0v-4.68c0.58,-0.05 1.16,-0.07 1.75,-0.07s1.17,0.02 1.75,0.07z"
-      android:fillColor="#6d7a84"/>
+      android:pathData="m15.5,19c-1.378,0 -2.5,-1.121 -2.5,-2.5v-3c0,-1.378 1.122,-2.5 2.5,-2.5s2.5,1.122 2.5,2.5v0.25c0,0.414 -0.336,0.75 -0.75,0.75s-0.75,-0.336 -0.75,-0.75v-0.25c0,-0.551 -0.449,-1 -1,-1s-1,0.449 -1,1v3c0,0.551 0.449,1 1,1s1,-0.449 1,-1h-0.75c-0.414,0 -0.75,-0.336 -0.75,-0.75s0.336,-0.75 0.75,-0.75h1.5c0.414,0 0.75,0.336 0.75,0.75v0.75c0,1.379 -1.122,2.5 -2.5,2.5z"
+      android:fillColor="#546e7a"/>
   <path
-      android:pathData="m65.75,96.95v4.68c-0.58,0.05 -1.16,0.07 -1.75,0.07s-1.17,-0.02 -1.75,-0.07v-4.68a1.75,1.75 0,1 1,3.5 0z"
-      android:fillColor="#6d7a84"/>
+      android:pathData="m10.25,19.063c-0.185,0 -0.371,-0.068 -0.516,-0.205l-3.5,-3.312c-0.15,-0.144 -0.235,-0.343 -0.234,-0.55s0.088,-0.404 0.24,-0.546l3.5,-3.25c0.304,-0.282 0.778,-0.264 1.06,0.04 0.282,0.303 0.264,0.778 -0.04,1.06l-2.914,2.706 2.919,2.762c0.301,0.285 0.314,0.76 0.029,1.061 -0.147,0.155 -0.345,0.234 -0.544,0.234z"
+      android:fillColor="#546e7a"/>
   <path
-      android:pathData="m87.94,77.76c0,0.59 -0.02,1.17 -0.07,1.75h-4.69a1.75,1.75 0,0 1,0 -3.5h4.69c0.05,0.58 0.07,1.16 0.07,1.75z"
-      android:fillColor="#6d7a84"/>
+      android:pathData="m6,15.003v3.247c0,0.414 0.336,0.75 0.75,0.75s0.75,-0.336 0.75,-0.75v-1.507l-1.266,-1.198c-0.148,-0.141 -0.233,-0.338 -0.234,-0.542z"
+      android:fillColor="#49606a"/>
   <path
-      android:pathData="m46.57,77.76a1.746,1.746 0,0 1,-1.75 1.75h-4.69c-0.05,-0.58 -0.07,-1.16 -0.07,-1.75s0.02,-1.17 0.07,-1.75h4.69a1.752,1.752 0,0 1,1.75 1.75z"
-      android:fillColor="#6d7a84"/>
+      android:pathData="m17.25,15h-1.5c-0.414,0 -0.75,0.336 -0.75,0.75s0.336,0.75 0.75,0.75h0.75c0,0.551 -0.449,1 -1,1s-1,-0.449 -1,-1v-1.5h-1.5v1.5c0,1.379 1.122,2.5 2.5,2.5s2.5,-1.121 2.5,-2.5v-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75z"
+      android:fillColor="#49606a"/>
   <path
-      android:pathData="m75.655,66.109a1.748,1.748 0,0 0,-2.474 0l-6.893,6.891a5.252,5.252 0,0 0,-2.288 -0.538,5.3 5.3,0 1,0 5.3,5.3 5.233,5.233 0,0 0,-0.54 -2.287l6.893,-6.894a1.748,1.748 0,0 0,0.002 -2.472zM64,79.566a1.8,1.8 0,1 1,1.8 -1.8,1.8 1.8,0 0,1 -1.8,1.8z"
-      android:fillColor="#6d7a84"/>
-  <path
-      android:pathData="m40.064,15.512h-18.2a1.75,1.75 0,1 1,0 -3.5h18.2a1.75,1.75 0,0 1,0 3.5z"
-      android:fillColor="#dd4e4e"/>
-  <path
-      android:pathData="m52.894,15.512h-5.354a1.75,1.75 0,0 1,0 -3.5h5.354a1.75,1.75 0,1 1,0 3.5z"
-      android:fillColor="#dd4e4e"/>
+      android:pathData="m7.853,15h-1.853v0.003c0.001,0.205 0.086,0.401 0.234,0.542l1.266,1.198 2.234,2.115c0.145,0.137 0.331,0.205 0.516,0.205 0.199,0 0.397,-0.078 0.545,-0.234 0.285,-0.301 0.271,-0.775 -0.029,-1.061l-2.919,-2.762z"
+      android:fillColor="#49606a"/>
 </vector>
